Create a display App in stead of java